--- a/Talleres/Taller_7_41.ipynb
+++ b/Talleres/Taller_7_41.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -219,13 +219,13 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def union_derecha(df1,df2):\n",
+    "    return  df1.merge(df2, how = 'right', on = 'id_cliente')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -241,7 +241,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## AUTO-CALIFICADOR\n",
     "\n",
@@ -328,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -381,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -397,13 +405,14 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def concatenar_interno(df1,df2):\n",
+    "    df=pd.concat([df1,df2], axis=0, join=\"inner\", ignore_index = True)\n",
+    "    return  df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -419,7 +428,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## AUTO-CALIFICADOR\n",
     "\n",
@@ -501,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -551,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -567,13 +584,15 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "import statistics\n",
+    "def mediana_faltantes(df1):\n",
+    "    a=df1.fillna(df1.median())\n",
+    "    return  a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -589,7 +608,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## AUTO-CALIFICADOR\n",
     "\n",
@@ -672,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -722,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -738,13 +765,19 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def cliente_dummies(df1):\n",
+    "    df = pd.get_dummies(df1, columns = [\"Sexo\"]) \n",
+    "    df =df.drop([\"Sexo_Masculino\"], axis=1) \n",
+    "    result = df.rename(columns={\"Sexo_Femenino\": \"Sexo\"}) \n",
+    "    result1=pd.get_dummies(result, columns = [\"Cliente Premium\"]) \n",
+    "    result1=result1.drop([\"Cliente Premium_Sí\"], axis=1)\n",
+    "    result2 = result1.rename(columns={\"Cliente Premium_No\": \"Cliente Premium\"}) \n",
+    "    return  result2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -760,7 +793,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## AUTO-CALIFICADOR\n",
     "\n",
@@ -829,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -873,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -889,13 +930,15 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def cadena_a_fecha(cadena):\n",
+    "    fecha_dt = datetime.strptime(cadena, '%Y-%d-%B')\n",
+    "\n",
+    "    return fecha_dt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -911,7 +954,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## AUTO-CALIFICADOR\n",
     "\n",
@@ -977,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -993,13 +1044,19 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def union_izquierda():\n",
+    "    #Tasa interbancaria\n",
+    "    df1 = pd.read_excel('Archivos/1.1.TIB_Serie historica IQY.xlsx',skiprows=7, skipfooter=6).rename(columns={\"Fecha(dd/mm/aaaa)\": \"Fecha\"})\n",
+    "    #Tasa intervención publica\n",
+    "    df2 = pd.read_excel('Archivos/1.2.TIP_Serie historica diaria IQY.xlsx',skiprows=7, skipfooter=4).rename(columns={\"Fecha (dd/mm/aaaa)\": \"Fecha\"})\n",
+    "    resul=df1.merge(df2, how = 'left', on = 'Fecha')\n",
+    "\n",
+    "    return resul"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1015,7 +1072,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## AUTO-CALIFICADOR\n",
     "\n",
@@ -1065,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1091,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1107,13 +1172,14 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def ejercicio7(df1):\n",
+    "   \n",
+    "    return  df1.columns[df1.isna().sum() > 1].tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1129,7 +1195,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## AUTO-CALIFICADOR\n",
     "\n",
@@ -1215,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1239,7 +1313,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fecha</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-03-23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-04-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-04-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166</th>\n",
+       "      <td>2012-11-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>167</th>\n",
+       "      <td>2012-11-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>2012-12-08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>2012-12-25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>2012-12-31</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>171 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Fecha\n",
+       "0   2020-01-01\n",
+       "1   2020-01-06\n",
+       "2   2020-03-23\n",
+       "3   2020-04-09\n",
+       "4   2020-04-10\n",
+       "..         ...\n",
+       "166 2012-11-05\n",
+       "167 2012-11-12\n",
+       "168 2012-12-08\n",
+       "169 2012-12-25\n",
+       "170 2012-12-31\n",
+       "\n",
+       "[171 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = pd.read_excel('Archivos/Festivos.xlsx')\n",
+    "df1 = df1[df1.columns[(2012 <= df1.columns) & (df1.columns <= 2020)]]\n",
+    "df1 = df1.apply(lambda x: x.str.extract(r\"(^\\d{,2} \\w+\\b)\", expand=False))\n",
+    "df1 = df1.apply(lambda x: x + \" {}\".format(x.name))\n",
+    "df1 = df1.melt(value_name=\"Fecha\").drop(columns=\"variable\")\n",
+    "df1[\"Fecha\"] = df1[\"Fecha\"].str.replace(r\"\\b[A-z]+\\b\",repl= lambda x: str(lista_meses.index(x.group(0)) + 1),regex=True)\n",
+    "df1[\"Fecha\"] = df1[\"Fecha\"].map(lambda x: datetime.strptime(x, '%d %m %Y'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1255,13 +1440,21 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def ejercicio8():\n",
+    "    df1 = pd.read_excel('Archivos/Festivos.xlsx')\n",
+    "    df1 = df1[df1.columns[(2012 <= df1.columns) & (df1.columns <= 2020)]]\n",
+    "    df1 = df1.apply(lambda x: x.str.extract(r\"(^\\d{,2} \\w+\\b)\", expand=False))\n",
+    "    df1 = df1.apply(lambda x: x + \" {}\".format(x.name))\n",
+    "    df1 = df1.melt(value_name=\"Fecha\").drop(columns=\"variable\")\n",
+    "    df1[\"Fecha\"] = df1[\"Fecha\"].str.replace(r\"\\b[A-z]+\\b\",repl= lambda x: str(lista_meses.index(x.group(0)) + 1),regex=True)\n",
+    "    df1[\"Fecha\"] = df1[\"Fecha\"].map(lambda x: datetime.strptime(x, '%d %m %Y'))\n",
+    "\n",
+    "    return pd.DatetimeIndex(df1[\"Fecha\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1277,7 +1470,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## AUTO-CALIFICADOR\n",
     "\n",
@@ -1374,7 +1575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
